--- a/GenericRepository/appsettings.json
+++ b/GenericRepository/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=IHAB; Initial Catalog=AR7B_GenericRepository; User ID=sa; Password=Admin.123;  MultipleActiveResultSets=true; TrustServerCertificate=true;"
+  }
 }
